--- a/html/styles/components/left-side.css
+++ b/html/styles/components/left-side.css
@@ -12,10 +12,6 @@
 	flex-grow: 0;
 }
 
-.left-side .image-holder:hover {
-	cursor: pointer;
-}
-
 .left-side .image-holder img {
 	height: clamp(70%, 50vw, 100%);
 	width: auto;
@@ -58,6 +54,8 @@
 	justify-content: center;
 	align-items: center;
 
+	border: none;
+
 	transition: all 200ms ease-in;
 
 	z-index: 100;
@@ -65,6 +63,7 @@
 
 #presentation:hover,
 #presentation:focus {
+	cursor: pointer;
 	background-color: #1d1f1f90;
 }
 
