🎉 init(PT): JS - 1st part
First section of javascript exercises

--- a/html/styles/components/button.css
+++ b/html/styles/components/button.css
@@ -71,5 +71,5 @@ button.black {
 }
 
 button.black .button-face {
-	background-color: rgb(35, 34, 34) !important;
+	background-color: #232222 !important;
 }
